# wg_utils

./: Cargo.toml  README.md  TODO.md  client.j2  openapi.yaml  peer.j2  requirements.txt  scratch.md  server.j2  wg_utils.py
src/: defines.rs  gen_logic.rs  gen_route_handlers.rs  interface_logic.rs  interface_route_handlers.rs  main.rs  peer_logic.rs  peer_route_handlers.rs  utils.rs
static/: index.html
static/spec/: openapi.yaml
templates/: interface.conf.template  peer.conf.template
