[package]
name = "wg_controller"
version = "0.1.0"
authors = ["cyrex562 <cyrex562@gmail.com>"]
edition = "2018"

[[bin]]
name = "wg_controller"

[dependencies]
actix-web = "*"
actix-rt = "*"
actix-files = "*"
actix-session = "*"
actix-utils = "*"
log = "*"
fern = "*"
serde = {  version = "*", features = ["derive"]}
serde_json = "*"
tera = "*"
clap = "*"
lazy_static = "*"